fix: ask button should be align middle
Also make all components in interactive area to 40px height

--- a/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatButtonGroup.module.scss
+++ b/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatButtonGroup.module.scss
@@ -5,11 +5,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-
-    .selectBtn {
-      margin-top: 10px;
-      margin-left: 10px;
-    }
+    gap: 10px;
   }
 }
 
