--- a/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInteractionArea.module.scss
+++ b/src/web/src/Pages/NewChatPage/Components/ChatUi/ChatInput/ChatInteractionArea.module.scss
@@ -35,10 +35,10 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-
     position: absolute;
     right: 10px;
-    bottom: 2px;
+    top: 50%;
+    transform: translateY(-50%);
     display: flex;
     flex-direction: row;
     align-items: center;
